refactor: alterar a sob rota /photo para /upload
